--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,7 @@
 		<dictionary.name>english</dictionary.name>
 		<blog.url>http://blog.sveikasvaikas.lt/?feed=rss2</blog.url>
 		<build.tag>${env.BUILD_TAG}</build.tag>
+		<site.files.directory>/tmp</site.files.directory>
 	</properties>
 
 	<build>
@@ -244,6 +245,13 @@
 			</extension>
 		</extensions>
 		<plugins>
+			<plugin>
+			        <groupId>org.mortbay.jetty</groupId>
+			        <artifactId>maven-jetty-plugin</artifactId>
+				<configuration>
+					<contextPath>/</contextPath>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
