--- a/pom.xml
+++ b/pom.xml
@@ -367,12 +367,12 @@
 			<artifactId>concurrent</artifactId>
 			<version>1.3.4</version>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>net.sf</groupId>
 			<artifactId>log4jdbc3</artifactId>
 			<version>1.1</version>
 			<scope>runtime</scope>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
