Added Jurgis profile.

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,44 @@
 
 	<profiles>
 		<profile>
+			<id>susikaupk</id>
+			<properties>
+				<serverId>tomas</serverId>
+				<site.db.host>localhost</site.db.host>
+				<site.db.database>nesveiksvaiks</site.db.database>
+				<site.db.username>tomas</site.db.username>
+				<site.db.password>tomas</site.db.password>
+				<site.files.directory>/home/tomas/src/shit/se-master</site.files.directory>
+				<flowDevelopment>false</flowDevelopment>
+				<tomcatMgr>http://localhost:8080/manager</tomcatMgr>
+				<messages.locale>en_GB</messages.locale>
+				<e.dictionary.name>english_e</e.dictionary.name>
+				<dictionary.name>english</dictionary.name>
+				<!-- <site.mail.smtpHost>stoned</site.mail.smtpHost> <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
+				<webappPath>/se-master</webappPath>
+				<!-- <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
+			</properties>
+		</profile>
+		<profile>
+			<id>Jurgis</id>
+			<properties>
+				<serverId>jurgis</serverId>
+				<site.db.host>localhost</site.db.host>
+				<site.db.database>jurgis</site.db.database>
+				<site.db.username>jurgis</site.db.username>
+				<site.db.password>jurgis</site.db.password>
+				<site.files.directory>/home/jurgis/workspaces/Eclipse/se-master</site.files.directory>
+				<flowDevelopment>false</flowDevelopment>
+				<tomcatMgr>http://localhost:8080/manager</tomcatMgr>
+				<messages.locale>en_GB</messages.locale>
+				<e.dictionary.name>english_e</e.dictionary.name>
+				<dictionary.name>english</dictionary.name>
+				<!-- <site.mail.smtpHost>stoned</site.mail.smtpHost> <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
+				<webappPath>/se-master</webappPath>
+				<!-- <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
+			</properties>
+		</profile>
+		<profile>
 			<id>opit</id>
 			<!-- off -->
 			<properties>
