--- a/pom.xml
+++ b/pom.xml
@@ -50,18 +50,16 @@
 			<properties>
 				<serverId>jurgis</serverId>
 				<site.db.host>localhost</site.db.host>
-				<site.db.database>jurgis</site.db.database>
-				<site.db.username>jurgis</site.db.username>
-				<site.db.password>jurgis</site.db.password>
-				<site.files.directory>/home/jurgis/workspaces/Eclipse/se-master</site.files.directory>
+				<site.db.database>SveikasVaikas</site.db.database>
+				<site.db.username>postgres</site.db.username>
+				<site.db.password>postgres</site.db.password>
+				<site.files.directory>/tmp/se-master</site.files.directory>
 				<flowDevelopment>false</flowDevelopment>
 				<tomcatMgr>http://localhost:8080/manager</tomcatMgr>
-				<messages.locale>en_GB</messages.locale>
-				<e.dictionary.name>english_e</e.dictionary.name>
-				<dictionary.name>english</dictionary.name>
-				<!-- <site.mail.smtpHost>stoned</site.mail.smtpHost> <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
+				<messages.locale>se_SE</messages.locale>
+				<e.dictionary.name>swedish_e</e.dictionary.name>
+				<dictionary.name>swedish</dictionary.name>
 				<webappPath>/se-master</webappPath>
-				<!-- <blog.url>http://blog.inbelly.co.uk/?feed=rss2</blog.url> -->
 			</properties>
 		</profile>
 		<profile>
