--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, logfile
+log4j.rootLogger=WARN, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -21,20 +21,20 @@ log4j.logger.org.springframework.js=warn
 log4j.logger.org.springframework=warn
 log4j.logger.org.springframework.beans=info
 log4j.logger.org.springframework.security=info
-log4j.logger.org.springframework.webflow=debug
+log4j.logger.org.springframework.webflow=info
 log4j.logger.org.springframework.binding=error
 log4j.logger.org.springframework.binding.convert=error
 log4j.logger.org.springframework.binding.convert.service=error
 log4j.logger.org.hibernate=warn
-log4j.logger.org.hibernate.SQL=error
-log4j.logger.org.hibernate.type=info
+log4j.logger.org.hibernate.SQL=warn
+log4j.logger.org.hibernate.type=warn
 log4j.logger.org.hibernate.tool.hbm2ddl=warn
 log4j.logger.org.hibernate.cache=warn
 log4j.logger.org.hibernate.ejb=error
 log4j.logger.org.hibernate.tool=warn
 log4j.logger.org.apache.tiles=error
-log4j.logger.com.megalogika=debug
-log4j.logger.org.apache.jasper=info
+log4j.logger.com.megalogika=info
+log4j.logger.org.apache.jasper=warn
 
 log4j.logger.freemarker.cache=info
 log4j.logger.freemarker.jsp=info
@@ -43,6 +43,10 @@ log4j.logger.com.mchange.v2=error
 log4j.logger.ml.filelist.DefaultPropertiesMethodNameResolver=error
 
 log4j.logger.net.sf.ehcache=error
+
+log4j.logger.net.sf.log4jdbc=warn
+
+#log4j.logger.jdbc.audit=OFF,jdbc
 
 !==============================================================================
 ! log4j.properties - An example configuration properties file for log4j.
