--- a/src/main/resources/site.properties
+++ b/src/main/resources/site.properties
@@ -1,15 +1,26 @@
 #db parametrai. juos \u0161iaip paduoda mavenas, jie konfig\u016bruojami POMe pvz skirtinguose profiliuose
-site.db.host=${baip.db.host}
-site.db.database=${baip.db.database}
-site.db.username=${baip.db.username}
-site.db.password=${baip.db.password}
+#Si Konfiguracija overide'inama i classpath idedant faila  site-custom.properties, kuriame yra instaliavimo konkrecioje aplinkoje parametrai.
 
-site.mail.smtpHost=localhost
+#site.db.host=${baip.db.host}
+#site.db.database=${baip.db.database}
+#site.db.username=${baip.db.username}
+#site.db.password=${baip.db.password}
+
+#Situos butina overide'inti produkcineje aplinkoje
+site.db.minPoolSize=2
+site.db.maxPoolSize=4
+site.db.acquireIncrement=1
+site.db.unreturnedConnectionTimeout=0
+site.db.debugUnreturnedConnectionStackTraces=false
+
+#site.mail.smtpHost=localhost
+
+flowDevelopment=false
 
 site.files.directory=/tmp
 
-e.dictionary.name=${e.dictionary.name}
-dictionary.name=${dictionary.name}
-messages.locale=${messages.locale}
+#e.dictionary.name=${e.dictionary.name}
+#dictionary.name=${dictionary.name}
+#messages.locale=${messages.locale}
 
 product.confirmationsRequired=2
