--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,11 @@
-log4j.rootLogger=WARN, stdout
+log4j.rootLogger=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=/tmp/se.inbelly.log
+log4j.appender.logfile.File=/home/webapps/logs/se.inbelly.log
 log4j.appender.logfile.MaxFileSize=64MB
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=3
